--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="header">
+  <app-header></app-header>
+</div>
+<div class="contenu">
+  <router-outlet></router-outlet>
+</div>
