--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,26 +1,31 @@
 .header-bar {
-  width: 100%;
-  position: absolute;
+  width: 100vw;
+  position: fixed;
+  z-index: 99;
   background-color: beige;
-  //background-color: rgb(240, 247, 242);
-
-  display: flex;
-  flex-direction: row;
+  color: rgb(11, 100, 11);
 
   ul {
-    position: sticky;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 60px;
 
-    li {
-      display: inline-block;
-      padding-top: 0px;
+    .menu li.onglet {
+      text-decoration: none;
+      height: auto;
+      border: solid 1px;
+
+      .menu li.onglet:hover {
+        display: block;
+        color: black;
+        cursor: pointer;
+      }
     }
 
     .nav-item {
-      color: rgb(11, 100, 11);
       font-weight: bold;
       text-align: center;
-      padding: 14px 16px;
       text-decoration: none;
     }
 
@@ -31,16 +36,19 @@
   }
 
   .logo {
+    position: absolute;
+    left: 5px;
+    top: 5px;
     width: 100px;
     height: 70px;
     background: url("/assets/img/BET_Logo.svg.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    margin-left: 10px;
   }
 
   .header-bar-button {
+    float: right;
     border-radius: 15px 50px;
     background-color: rgb(11, 100, 11);
     margin-top: 5px;
