session summary component

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>Welcome on My Friend Bet</h1>
 <h2>Have a look on yours competitions in progress :</h2>
 <hr />
-<app-session-summary></app-session-summary>
+<app-sessions></app-sessions>
 
 <h4>ENJOY</h4>
