--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .contenu {
   background-color: rgb(11, 100, 11);
-  position: absolute;
-  margin-top: 50px;
-  height: 100%;
-  width: 100%;
+  margin: 0;
+  padding-top: 80px;
+  height: 100vw;
+  width: 100vh;
 }
 
 .header {
