--- a/client/src/app/components/user/create-edit-user/create-edit-user.component.html
+++ b/client/src/app/components/user/create-edit-user/create-edit-user.component.html
@@ -1,51 +1,63 @@
-<div class="container py-5">
-  <div class="row">
-    <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto">
-      <div class="bg-white shadow rounded p-4">
-        <h1 display-6 text-dark>Créez votre profil utilisateur :</h1>
-        <hr class="bg-dark mb-5" />
-        <form
-          [formGroup]="inscriptionFormGroup"
-          (ngSubmit)="onSubmitInscriptionForm()"
-        >
-          <div>
-            <label for="pseudoInput" disabled="false">Votre pseudo : </label>
-            <input type="text" formControlName="pseudoFC" id="pseudoInput" />
-          </div>
-          <div>
-            <label for="emailInput">Votre email : </label>
-            <input type="text" formControlName="emailFC" id="emailInput" />
-          </div>
-          <div *ngIf="isOnCreationMode">
-            <label for="passwordInput">Votre mot de passe : </label>
-            <input
-              type="password"
-              formControlName="passwordFC"
-              id="passwordInput"
-            />
-          </div>
-          <div>
-            <label for="nameInput">Votre nom : </label>
-            <input type="text" formControlName="nameFC" id="nameInput" />
-          </div>
-          <div>
-            <label for="firstnameInput">votre prénom :</label>
-            <input
-              type="text"
-              formControlName="firstnameFC"
-              id="firstnameInput"
-            />
-          </div>
-          <div class="d-flex">
-            <button
-              class="btn btn-success mx-auto"
-              type="submit"
-              [disabled]="inscriptionFormGroup.invalid"
+<div class="body">
+  <div class="cadre">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto">
+          <div class="bg-white shadow rounded p-4">
+            <h1 display-6 text-dark>Créez votre profil utilisateur :</h1>
+            <hr class="bg-dark mb-5" />
+            <form
+              [formGroup]="inscriptionFormGroup"
+              (ngSubmit)="onSubmitInscriptionForm()"
             >
-              Valider
-            </button>
+              <div>
+                <label for="pseudoInput" disabled="false"
+                  >Votre pseudo :
+                </label>
+                <input
+                  type="text"
+                  formControlName="pseudoFC"
+                  id="pseudoInput"
+                />
+              </div>
+              <div>
+                <label for="emailInput">Votre email : </label>
+                <input type="text" formControlName="emailFC" id="emailInput" />
+              </div>
+              <div *ngIf="isOnCreationMode">
+                <label for="passwordInput">Votre mot de passe : </label>
+                <input
+                  type="password"
+                  formControlName="passwordFC"
+                  id="passwordInput"
+                />
+              </div>
+              <div>
+                <label for="nameInput">Votre nom : </label>
+                <input type="text" formControlName="nameFC" id="nameInput" />
+              </div>
+              <div>
+                <label for="firstnameInput">votre prénom :</label>
+                <input
+                  type="text"
+                  formControlName="firstnameFC"
+                  id="firstnameInput"
+                />
+              </div>
+              <div class="d-flex">
+                <button
+                  mat-stroked-button
+                  color="primary"
+                  class="btn btn-success mx-auto"
+                  type="submit"
+                  [disabled]="inscriptionFormGroup.invalid"
+                >
+                  Valider
+                </button>
+              </div>
+            </form>
           </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
