--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,6 +1,8 @@
-<h1>Welcome on My Friend Bet</h1>
-<h2>Have a look on yours competitions in progress :</h2>
-<hr />
-<app-sessions></app-sessions>
+<div class="body">
+  <h1>Welcome on My Friend Bet</h1>
+  <h2>Have a look on yours competitions in progress :</h2>
+  <hr />
+  <app-session-summary></app-session-summary>
 
-<h4>ENJOY</h4>
+  <h4>ENJOY</h4>
+</div>
