--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       Mon Profil
     </div>
     <div class="menu-item nav-item">Config</div>
-    <div class="menu-item nav-item" (click)="navigate('/sessions')">
+    <div class="menu-item nav-item" (click)="navigate('/sessions/')">
       Sessions
     </div>
     <div class="menu-item nav-item" (click)="navigate('/bets')">
