--- a/client/src/app/components/match/match.component.scss
+++ b/client/src/app/components/match/match.component.scss
@@ -1,6 +1,3 @@
-@use "@angular/material" as mat;
-
-@include mat.core();
 @import "../../colors.scss";
 
 h1 {
@@ -20,8 +17,10 @@ h1 {
   }
   label {
     color: $beige;
+    font-weight: bolder;
   }
   input {
     color: $beige;
+    border-radius: 5px;
   }
 }
