--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -5,10 +5,11 @@
   margin: 0;
   height: 100vw;
   width: 100%;
+  margin-top: 20px;
 }
 
 .header {
-  height: 80px;
+  height: 60px;
   width: 100%;
   margin: 0;
   padding: 0;
