creation de paris

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,15 +1,16 @@
 @import "./colors.scss";
+
 .contenu {
   background-color: $background-contenu;
   color: $write-contenu;
   margin: 0;
-  height: 100vw;
+  height: calc(100% - 80px);
   width: 100%;
-  margin-top: 20px;
+  position: absolute;
 }
 
 .header {
-  height: 60px;
+  height: 80px;
   width: 100%;
   margin: 0;
   padding: 0;
