--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-bar">
   <div class="nomappli">
     <div class="logo"></div>
-    <h1>My friend Bet</h1>
+    <h1>My friend's Bet</h1>
     <mat-divider [vertical]="true"></mat-divider>
   </div>
   <div class="menu">
