--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,8 +1,9 @@
-<div class="body">
-  <h1>Welcome on My Friend Bet</h1>
-  <h2>Have a look on yours competitions in progress :</h2>
+<div class="container">
+  <h1>Welcome on My Friend's Bet</h1>
   <hr />
-  <app-session-summary></app-session-summary>
+  <div class="phrase1">
+    <span>Create a competition and add your friends !!!</span>
+  </div>
 
   <h4>ENJOY</h4>
 </div>
