--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -1,7 +1,16 @@
-.body {
-  margin-left: auto;
-  margin-right: auto;
-  width: 500px; /* largeur obligatoire pour être centré */
+@import "../../colors.scss";
+
+.container {
   text-align: center;
-  padding-top: 50px;
+  color: $beige;
+  position: relative;
+  background-image: url("../../../assets/img/sports.jpg");
+  width: 100%;
+  height: 100%;
+
+  .phrase1 {
+    margin-top: 420px;
+    font-size: 35px;
+    font-weight: bolder;
+  }
 }
