--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h1>Welcome on My Friend's Bet</h1>
+  <h1>Bienvenue sur PronosBet</h1>
   <hr />
   <div class="phrase1">
-    <span>Create a competition and add your friends !!!</span>
+    <span>Créez vos sessions et invitez vos amis</span>
   </div>
 
   <h4>ENJOY</h4>
