--- a/client/src/app/colors.scss
+++ b/client/src/app/colors.scss
@@ -4,6 +4,6 @@ $background-contenu: rgb(108, 143, 220);
 $write-contenu: black;
 $hover: rgb(7, 7, 7);
 $background-button: rgb(17, 12, 73);
-$vip: red;
+$vip: rgb(119, 0, 255);
 $beige: beige;
 $noir: black;
