--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -2,9 +2,12 @@
 
 .container {
   text-align: center;
-  color: $beige;
+  color: darkgrey;
+  font-size: 32px;
   position: relative;
   background-image: url("../../../assets/img/sports.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100%;
 
