ajout du gard  +css

--- a/client/src/app/colors.scss
+++ b/client/src/app/colors.scss
@@ -1,9 +1,9 @@
 $background: rgb(209, 212, 196);
 $write: rgb(17, 12, 73);
-$background-contenu: rgb(108, 143, 220);
+$background-contenu: darkgray;
 $write-contenu: black;
 $hover: rgb(7, 7, 7);
 $background-button: rgb(17, 12, 73);
-$vip: rgb(119, 0, 255);
+$vip: cadetblue;
 $beige: beige;
 $noir: black;
