--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h1>Bienvenue sur PronosBet</h1>
-  <hr />
+  <span class="titre1"> Bienvenue sur PronosBet</span>
+
   <div class="phrase1">
-    <span>Créez vos sessions et invitez vos amis</span>
+    <span class="titre2">Créez vos sessions et invitez vos amis</span>
   </div>
 
   <h4>ENJOY</h4>
