--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,5 +1,4 @@
 @import "./colors.scss";
-
 .contenu {
   background-color: $background-contenu;
   color: $write-contenu;
@@ -7,6 +6,7 @@
   height: calc(100% - 80px);
   width: 100%;
   position: absolute;
+  overflow: auto;
 }
 
 .header {
