Ajout spring security

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -25,9 +25,8 @@
     pButton
     pRipple
     type="button"
-    label="Secondary"
     class="p-button-rounded p-button-secondary"
-    (click)="navigate('/user')"
+    (click)="navigate('/connection')"
   >
     Se connecter
   </button>
